# AILang

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  COMMANDS.md  SPECIFICATION.md
examples/: basic_usage.py  providers.py  use_cases.py
src/ailang/: __init__.py  cli.py  contracts.py  core.py  parser.py  providers.py  server.py  transpiler.py
tests/: test_contracts.py  test_parser.py  test_transpiler.py
